crates/tui/tests/snapshots/render__edit_form_choice_row.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 120, 20)"
---
"┌ Tasks (5/5) ─────────────────────────────────────────────┐┌ [1] ─────────────────────────────────────────────────────┐"
"│IN PROGRESS                                               ││Fix the flaky build                                       │"
"│  [ 1] #A Fix the flaky build (due 2026-10-10)  #ci       ││[1]  #A  in-progress  due 2026-10-10                      │"
"│READY                                                     ││ #ci                                                      │"
"│  [12] #B Review MR !88: paginate the export  #gitlab   #r││                                                          │"
"│  [ 3] #C Write the release note┌ Edit [1] ─────────────────────────────────────────┐p                                │"
"│LATER                           │ Title     Fix the flaky build                     │                                 │"
"│  [ 4] #B Try the new profiler  │ Status    < ready >                               │                                 │"
"│NO STATUS                       │ Priority  A                                       │ time in three.                  │"
"│  [ 5] #B Call the bank         │ Due       2026-10-10                              │                                 │"
"│                                │ Project   /home/me/code/app                       │                                 │"
"│                                │ Tags      ci                                      │                                 │"
"│                                └───────────────────────────────────────────────────┘ue/1                             │"
"│                                                          ││                                                          │"
"│                                                          ││Merge requests                                            │"
"│                                                          ││- Pin the cache key                                       │"
"│                                                          ││<https://gitlab.example.com/g/p/-/merge_requests/7>       │"
"│                                                          ││                                                          │"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"Up/Down, Tab: next row  Left/Right: change  Enter: save  Esc: cancel                                                    "
