crates/tui/tests/snapshots/render__edit_view_bad_due.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 120, 24)"
---
"┌ Edit [1] ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Title      Fix the flaky build                                                                                       │"
"│ Status     ready                                                                                                     │"
"│ Priority   A                                                                                                         │"
"│ Due        2026-10-10x                                                                                               │"
"│ Project    /home/me/code/app                                                                                         │"
"│ Tags       ci                                                                                                        │"
"│                                                                                                                      │"
"│ Description ──────────────────────────────────────────────────────────────────────────────────────────────────────── │"
"│ The nightly job fails one time in three. Cache.                                                                      │"
"│ Suspect the cache.                                                                                                   │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"due: invalid date or timestamp "2026-10-10x" (expected YYYY-MM-DD or YYYY-MM-DD HH:MM)                                  "
