crates/tui/tests/snapshots/render__edit_view_choice_row_100.snap
---
source: crates/tui/tests/render.rs
expression: "screen(&mut model, 100, 20)"
---
" Edit [1]  Fix the flaky build                                                                      "
"┌ Title ───────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Fix the flaky build                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Status ─────────────────────────────────────────────────┐ ┌ Priority ────────────────────────────┐"
"│  in-progress   ready   waiting   blocked   later   none │ │  A   B   C                           │"
"└─────────────────────────────────────────────────────────┘ └──────────────────────────────────────┘"
"┌ Due ─────────┐ ┌ Project ──────────────────────────────────────┐ ┌ Tags ─────────────────────────┐"
"│ 2026-10-10   │ │ /home/me/code/app                             │ │ ci                            │"
"└──────────────┘ └───────────────────────────────────────────────┘ └───────────────────────────────┘"
"┌ Description ─────────────────────────────────────────────────────────────────────────────────────┐"
"│ The nightly job fails one time in three.                                                         │"
"│ Suspect the cache.                                                                               │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Tab/S-Tab row  ↑↓←→ move  Enter next / newline  C-s save  Esc cancel                                "
