crates/tui/tests/snapshots/render__edit_view_description.snap
---
source: crates/tui/tests/render.rs
expression: terminal.backend().to_string()
---
"┌ Edit [1] ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Title      Fix the flaky build                                                                                       │"
"│ Status     ready                                                                                                     │"
"│ Priority   A                                                                                                         │"
"│ Due        2026-10-10                                                                                                │"
"│ Project    /home/me/code/app                                                                                         │"
"│ Tags       ci                                                                                                        │"
"│                                                                                                                      │"
"│ Description ──────────────────────────────────────────────────────────────────────────────────────────────────────── │"
"│ The nightly job fails one time in three. Cache.                                                                      │"
"│ Suspect the cache.                                                                                                   │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Tab/S-Tab row  ↑↓←→ move  Enter next / newline  C-s save  Esc cancel                                                    "
